<resources>
    <string name="app_name">CERVER</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    // Menu
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_send">Chat</string>
    <string name="menu_user">User</string>
    <string name="menu_admin">Admin</string>
    <string name="menu_tasks">Tasks</string>

    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>

    // Login, Sign up pages
    <string name="sign_up_long">Do not have an account yet? Create account here!</string>
    <string name="login_long">Already have an account? Sign in here!</string>
    <string name="login_short">Login</string>
    <string name="sign_up_short">Sign up</string>

    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="sex">Sex</string>

    <string-array name="sex">
        <item>Sex</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="success">Success</string>
    <string name="error">Error</string>

    // User Details page
    <string name="update_details">Update details</string>
    <string name="user_details">Settings</string>

    // Create task page
    <string name="create_task">Create Task</string>
    <string name="task_tile">Title</string>
    <string name="task_description">Description</string>
    <string name="task_difficulty">Difficulty</string>
    <string name="task_experience">Experience</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>

    // Partial_task
    <string name="experience">Experience: </string>
    <string name="difficulty">Difficulty: </string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>
