<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/task_layout"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="3dp"
    android:layout_marginTop="3dp"
    android:layout_marginRight="5dp"
    android:layout_marginStart="5dp"
    android:baselineAligned="false"
    android:layout_marginEnd="5dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp">

        <TextView
            android:id="@+id/title"
            android:text="@string/task_tile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textSize="18sp"
            android:color="#FFF"/>

        <TextView
            android:id="@+id/description"
            android:text="@string/task_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:color="#FFF"/>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:text="@string/difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textSize="14sp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp" />

            <TextView
                android:id="@+id/difficulty"
                android:text="@string/task_difficulty"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textSize="14sp"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/edit"
            android:layout_width="100dp"
            android:layout_height="42dp"
            android:layout_gravity="end"
            android:enabled="true"
            android:text="@string/edit"
            android:layout_marginBottom="5dp"/>

        <Button
            android:id="@+id/delete"
            android:layout_width="93dp"
            android:layout_height="32dp"
            android:background="@color/colorAccent"
            android:layout_gravity="end"
            android:enabled="true"
            android:text="@string/delete"
            android:layout_marginRight="3dp"
            android:layout_marginEnd="3dp"
            android:textColor="#FFF"/>

    </LinearLayout>

</LinearLayout>