<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp" >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_page"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_task"
                android:textSize="24sp"
                android:gravity="center"
                android:layout_marginBottom="25dp"/>

            <EditText
                android:id="@+id/title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/task_tile"
                android:selectAllOnFocus="true"
                android:layout_marginBottom="15dp"/>

            <EditText
                android:id="@+id/description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:hint="@string/task_description"
                android:selectAllOnFocus="true"
                android:layout_marginBottom="15dp"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <EditText
                android:id="@+id/difficulty"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:hint="@string/task_difficulty"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/experience"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:hint="@string/task_experience"
                android:selectAllOnFocus="true" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/create"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:text="@string/create"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="35dp"
                android:layout_marginTop="50dp"/>

        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>